--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,9 +2,10 @@ cmake_minimum_required(VERSION 3.11)
 
 #----------------------------------------------------------------------------------------------------------------------
 
+set(CUDASYS $ENV{CUDASYS})
+set(CMAKE_CUDA_TOOLKIT_ROOT_DIR "${CUDASYS}")
 set(NVCOMPILERS $ENV{NVCOMPILERS})
 set(NVARCH $ENV{NVARCH})
-set(CMAKE_CUDA_TOOLKIT_ROOT_DIR "${NVCOMPILERS}/${NVARCH}/25.3/cuda/12.8")
 set(CMAKE_CUDA_COMPILER "${NVCOMPILERS}/${NVARCH}/25.3/compilers/bin/nvcc")
 if(NOT DEFINED CMAKE_CUDA_COMPILER)
     message(FATAL_ERROR "CUDA is not found!")
@@ -30,7 +31,7 @@ project(cutensors LANGUAGES CXX CUDA)
 
 #----------------------------------------------------------------------------------------------------------------------
 
-set(nvtx3_dir "${CMAKE_CUDA_TOOLKIT_ROOT_DIR}/NVTX/c")
+set(nvtx3_dir "${CUDASYS}/NVTX/c")
 include("${nvtx3_dir}/nvtxImportedTargets.cmake")
 
 #----------------------------------------------------------------------------------------------------------------------
